[package]
name = "cbor_event"
version = "3.1.0"
edition = "2015"
rust-version = "1.81"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>", "Vincent Hanquez <vincent@typed.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = [ "parsing", "encoding" ]
keywords = ["cbor", "binary", "format", "encoding"]
repository = "https://github.com/primetype/cbor_event"
homepage = "https://github.com/primetype/cbor_event#readme.md"
description = """
The CBOR Event library. There are no dependencies, all platforms are supported and it is wasm compatible.
"""

[dev-dependencies]
half = "2.7.1"
quickcheck = "0.7"
